--- a/nightly_full/Dockerfile
+++ b/nightly_full/Dockerfile
@@ -7,6 +7,6 @@ ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Etc/UTC
 
 COPY kicad_3d_install.sh kicad_version.py /usr/bin/
-COPY images.tar.gz /usr/share/kicad/resources/
-COPY pcm.v1.schema.json api.v1.schema.json /usr/share/kicad/schemas/
-COPY fp-lib-table sym-lib-table /usr/share/kicad/template/
+# COPY images.tar.gz /usr/share/kicad/resources/
+# COPY pcm.v1.schema.json api.v1.schema.json /usr/share/kicad/schemas/
+# COPY fp-lib-table sym-lib-table /usr/share/kicad/template/
