--- a/base_os_nightly_full/Dockerfile
+++ b/base_os_nightly_full/Dockerfile
@@ -51,7 +51,8 @@ RUN	echo "Install Blender" && \
 
 RUN	echo "Install blender plug-in" && \
 	blender --online-mode --command extension sync && \
-	blender --online-mode --command extension install --enable pcb3d_importer
+	blender --online-mode --command extension install --enable pcb3d_importer && \
+	ln -s /root/.config/blender/4.2/extensions/blender_org/pcb3d_importer /bin/4.2/extensions/system/
 #	sed -i '/^wheels =/d' /root/.config/blender/4.2/extensions/blender_org/pcb3d_importer/blender_manifest.toml  && \
 #	rm -rf /root/.config/blender/4.2/extensions/blender_org/pcb3d_importer/wheels/
 
