base_os_nightly -> switching to KiCad 9.0.1

--- a/base_os_nightly/Dockerfile
+++ b/base_os_nightly/Dockerfile
@@ -1,4 +1,5 @@
-FROM kicad/kicad:9.0
+#FROM kicad/kicad:9.0
+FROM ghcr.io/inti-cmnb/base_os:kicad_9.0.1
 LABEL Maintainer="Salvador E. Tropea <stropea@inti.gob.ar>"
 LABEL Description="Debian with basic tools for KiBot"
 LABEL org.opencontainers.image.description="Debian with basic tools for KiBot"
